force-app/main/default/objects/ORTLRisk__c.object
<CustomObject>
    <fields>
        <fullName>APU__c</fullName>
        <label>APU</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApptootherEQP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To create more Risk record with different TAG No.</description>
        <label>Applicable to other equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssessmentType__c</fullName>
        <description>To select Assessment type of Risk</description>
        <label>Threat Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRA (Potential Risk Assessment)</fullName>
                </value>
                <value>
                    <fullName>RRA (Reactive Risk Assessment)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causeoffailure__c</fullName>
        <description>To record Cause of failure</description>
        <label>Cause of failure (Root cause)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CheckApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Applicable to Other Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DEMNo__c</fullName>
        <label>DEM No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEM__c</fullName>
        <description>To select DEM</description>
        <label>DEM /Causal Learning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnRiskMgt__c</fullName>
        <description>To select Enterprise Risk Management</description>
        <label>Enterprise Risk Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FailureMode__c</fullName>
        <label>Failure Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-00001</fullName>
                </value>
                <value>
                    <fullName>E-00002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinConsEffect__c</fullName>
        <description>Display Risk consequence</description>
        <label>Final Consequence Effect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm Threat</fullName>
                </value>
                <value>
                    <fullName>&quot;Bad Actor&quot; Incident</fullName>
                </value>
                <value>
                    <fullName>LOPC : Loss of Primary Containment</fullName>
                </value>
                <value>
                    <fullName>Process Safety Incident</fullName>
                </value>
                <value>
                    <fullName>PTM IOW</fullName>
                </value>
                <value>
                    <fullName>PTM QMI</fullName>
                </value>
                <value>
                    <fullName>PTM RE</fullName>
                </value>
                <value>
                    <fullName>Trip Threat</fullName>
                </value>
                <value>
                    <fullName>Unit Shutdown/ UPDT</fullName>
                </value>
                <value>
                    <fullName>Vibration at D-severity Level</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Safety Incident</fullName>
                    <isActive>false</isActive>
                    <label>Personal Safety Incident</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinOtherConsEff__c</fullName>
        <label>Other Final Consequence Effect Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinRiskCons__c</fullName>
        <description>Display Risk consequence</description>
        <label>Final Threat Consequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
                <value>
                    <fullName>Product Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalLikelihood__c</fullName>
        <description>To select likelihood of risk</description>
        <label>Final Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalRiskReason__c</fullName>
        <description>Final risk reason when risk remain M or H</description>
        <label>Final Risk Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalRisk__c</fullName>
        <description>Display level of Final Risk</description>
        <label>Final Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>L/N</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalSeverity__c</fullName>
        <description>To select seveity of risk</description>
        <label>Final Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>FinalSeverity</fullName>
                    <isActive>false</isActive>
                    <label>FinalSeverity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalValueMUSD__c</fullName>
        <description>Display final risk value in MUSD</description>
        <formula>FinalValueUSD__c / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Value (MUSD)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinalValueUSD__c</fullName>
        <description>Display final risk value in USD</description>
        <label>Final Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IniOtherConsEff__c</fullName>
        <label>Other Initial Consequence Effect Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialRisk__c</fullName>
        <description>Display level of Initial Risk</description>
        <label>Initial Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>L/N</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InitialSeverity__c</fullName>
        <description>To select seveity of risk</description>
        <label>Initial Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InitialValueUSD__c</fullName>
        <description>Display initial risk value in USD</description>
        <label>Initial Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InitiativeBy__c</fullName>
        <formula>Owner:User.FirstName+&quot; &quot;+Owner:User.LastName</formula>
        <label>Initiative By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitiativeDate__c</fullName>
        <description>Display created date</description>
        <label>Threat Record Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntConsEffect__c</fullName>
        <description>Display Risk consequence of Initial Risk Assessment</description>
        <label>Initial Consequence Effect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alarm Threat</fullName>
                </value>
                <value>
                    <fullName>&quot;Bad Actor&quot; Incident</fullName>
                </value>
                <value>
                    <fullName>LOPC : Loss of Primary Containment</fullName>
                </value>
                <value>
                    <fullName>Process Safety Incident</fullName>
                </value>
                <value>
                    <fullName>PTM IOW</fullName>
                </value>
                <value>
                    <fullName>PTM QMI</fullName>
                </value>
                <value>
                    <fullName>PTM RE</fullName>
                </value>
                <value>
                    <fullName>Trip Threat</fullName>
                </value>
                <value>
                    <fullName>Unit Shutdown/ UPDT</fullName>
                </value>
                <value>
                    <fullName>Vibration at D-severity Level</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Safety Incident</fullName>
                    <isActive>false</isActive>
                    <label>Personal Safety Incident</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntRiskCons__c</fullName>
        <description>Display Risk consequence of Initial Risk Assessment</description>
        <label>Initial Threat Consequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
                <value>
                    <fullName>Product Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntValueMUSD__c</fullName>
        <description>Display initial risk value in MUSD</description>
        <formula>InitialValueUSD__c / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Value (MUSD)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntlLikelihood__c</fullName>
        <description>To select likelihood of Initial risk</description>
        <label>Initial Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate Risk Record Status Active/Inactive</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaintenanceTask__c</fullName>
        <label>Maintenance Tasks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginalRisk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Display original Risk</description>
        <inlineHelpText>Referral threat number</inlineHelpText>
        <label>Original Threat</label>
        <referenceTo>ORTLRisk__c</referenceTo>
        <relationshipLabel>Threat (Original Threat)</relationshipLabel>
        <relationshipName>Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentRisk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To refer to closed risk record which related</description>
        <label>Parent Threat</label>
        <referenceTo>ORTLRisk__c</referenceTo>
        <relationshipName>Risk1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlantCode__c</fullName>
        <formula>TagNo__r.Company_Code__r.Name</formula>
        <label>Plant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantName__c</fullName>
        <formula>TagNo__r.Company_Code__r.Description__c</formula>
        <label>Plant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantSection__c</fullName>
        <label>Plant Section</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskClosedDate__c</fullName>
        <label>Threat Eradicated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RiskInitiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Display risk initiator name</description>
        <label>Threat Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskReductMUSD__c</fullName>
        <description>Display reduced risk value in MUSD</description>
        <formula>IntValueMUSD__c - FinalValueMUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Reduction (MUSD)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RiskScenarioDes__c</fullName>
        <description>To record Risk Scenario Description</description>
        <label>Threat Scenario Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RiskScenario__c</fullName>
        <description>To record Risk Scenario</description>
        <label>Threat Scenario</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RiskStatus__c</fullName>
        <description>Display current risk status</description>
        <label>Threat Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Mitigation</fullName>
                </value>
                <value>
                    <fullName>Awaiting Final Assessment</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TagCode__c</fullName>
        <formula>TagNo__r.Name</formula>
        <label>Tag Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TagNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Display Functional Location</description>
        <label>Tag No.</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipName>Risk1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Threat__c</fullName>
        <description>To select threat of risk record</description>
        <label>Threat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UpDT incident</fullName>
                </value>
                <value>
                    <fullName>Process Safety, LOPC</fullName>
                </value>
                <value>
                    <fullName>Stationary Equipment Integrity</fullName>
                </value>
                <value>
                    <fullName>Equipment Frequent Failures</fullName>
                </value>
                <value>
                    <fullName>Frequent Violation of PTM limits</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Display Unit of selected Tag no.</description>
        <formula>TagNo__r.Location__c</formula>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txtPlanningPlant__c</fullName>
        <label>Planning Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txtTagNo__c</fullName>
        <description>To search in list view</description>
        <label>Tag No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Threat</label>
    <listViews>
        <fullName>APUA</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>APU A</label>
    </listViews>
    <listViews>
        <fullName>APUB</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>B</value>
        </filters>
        <filters>
            <field>RiskStatus__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>APU B</label>
    </listViews>
    <listViews>
        <fullName>APUC</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <filters>
            <field>RiskStatus__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>APU C</label>
    </listViews>
    <listViews>
        <fullName>APUD</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>APU D</label>
    </listViews>
    <listViews>
        <fullName>APUE</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>E</value>
        </filters>
        <label>APU E</label>
    </listViews>
    <listViews>
        <fullName>APUF</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>F</value>
        </filters>
        <label>APU F</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>Threat__c</columns>
        <columns>IntConsEffect__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chayut_LIST</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <columns>AssessmentType__c</columns>
        <columns>IntConsEffect__c</columns>
        <columns>Threat__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <filters>
            <field>RiskStatus__c</field>
            <operation>equals</operation>
            <value>New,Mitigation,Awaiting Final Assessment</value>
        </filters>
        <filters>
            <field>PlantSection__c</field>
            <operation>equals</operation>
            <value>TOC5</value>
        </filters>
        <label>Chayut TOC-3</label>
        <sharedTo>
            <group>ENMC</group>
            <group>MFOP</group>
            <group>MROC</group>
            <group>TNPC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RiskCriticalBetweenLAndLN</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InitialRisk__c</field>
            <operation>equals</operation>
            <value>L,L/N</value>
        </filters>
        <label>Threat critical between L and L/N</label>
    </listViews>
    <listViews>
        <fullName>RiskCriticalH</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InitialRisk__c</field>
            <operation>equals</operation>
            <value>H</value>
        </filters>
        <label>Threat Critical H</label>
    </listViews>
    <listViews>
        <fullName>RiskCriticalM</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InitialRisk__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <label>Threat Critical M</label>
    </listViews>
    <listViews>
        <fullName>RiskcriticalbetweenHandM</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>InitiativeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RiskScenario__c</columns>
        <columns>InitialRisk__c</columns>
        <columns>FinalRisk__c</columns>
        <columns>RiskStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InitialRisk__c</field>
            <operation>equals</operation>
            <value>M,H</value>
        </filters>
        <label>Threat critical between H and M</label>
    </listViews>
    <nameField>
        <label>Threat No.</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ORTLRiskCheckFinalRiskAssessment</fullName>
        <active>true</active>
        <description>Input value before save data.</description>
        <errorConditionFormula>text(RiskStatus__c) = &apos;Closed&apos; &amp;&amp; text(FinalRisk__c) = &apos;&apos;</errorConditionFormula>
        <errorMessage>Please select final risk assessment before save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ORTLRiskCheckIsChangeRiskNo</fullName>
        <active>true</active>
        <description>To check if user change risk no.</description>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED( Name ),
    NOT($Profile.Name = &quot;ผู้ดูแลระบบ&quot;)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Cannot change value of Risk No.</errorMessage>
    </validationRules>
</CustomObject>